// Диаграмма БД goprac (MVP)
// Открыть визуально: https://dbdiagram.io → New Diagram → вставить этот файл
// Или в DBeaver: правый клик по схеме → ERD

Project goprac {
  database_type: 'PostgreSQL'
  Note: '''Учёт измерений коровников: объекты, группы, показатели, оффлайн-синхронизация'''
}

// ===== Справочники =====

Table users {
  id bigserial [pk]
  name varchar [unique, not null]
  role varchar [default: 'operator']
  Note: 'Сотрудники: операторы, зоотехники'
}

Table group_types {
  id bigserial [pk]
  name varchar [unique, not null]
  Note: 'Типы групп: Коровники, Склады, Отбор животных'
}

Table groups {
  id bigserial [pk]
  group_type_id bigint [not null, ref: > group_types.id]
  parent_id bigint [ref: > groups.id]
  name varchar [not null]
  indexes {
    (group_type_id, name) [unique]
  }
  Note: 'Иерархия групп: Коровник №1, Склад кормов'
}

Table object_types {
  id bigserial [pk]
  parent_id bigint [ref: > object_types.id]
  name varchar [unique, not null]
  group_flag boolean [default: false]
  Note: 'Типы объектов. group_flag=true — для групповых типов экземпляры не создаются'
}

// ===== Объекты =====

Table objects {
  id bigserial [pk]
  object_type_id bigint [not null, ref: > object_types.id]
  name varchar [not null]
  is_active boolean [default: true]
  created_at timestamptz [default: `now()`]
  indexes {
    (object_type_id, name) [unique]
    object_type_id
  }
  Note: 'Единый реестр экземпляров: животные, коровники, инвентарь'
}

Table object_identifiers {
  id bigserial [pk]
  object_id bigint [not null, ref: > objects.id, delete: cascade]
  id_type varchar [not null]
  value varchar [not null]
  indexes {
    (id_type, value) [unique]
  }
  Note: 'RFID, бирки, чипы. Поиск по метке сканером'
}

Table object_groups {
  object_id bigint [pk, ref: > objects.id, delete: cascade]
  group_id bigint [pk, ref: > groups.id, delete: cascade]
  Note: 'm:n — объект может состоять в нескольких группах'
}

Table object_history {
  id bigserial [pk]
  object_id bigint [not null, ref: > objects.id, delete: cascade]
  group_id bigint [ref: > groups.id]
  action varchar [not null]
  author_id bigint [ref: > users.id]
  acted_at timestamptz [default: `now()`]
  Note: 'Аудит перемещений: added | removed | moved'
}

// ===== Показатели =====

Table measures {
  id bigserial [pk]
  name varchar [unique, not null]
  data_type varchar [default: 'numeric', note: 'numeric | text | bool']
  unit varchar
  measure_type varchar [default: 'instant', note: 'instant — замена значения; balance — накопление (обороты)']
}

Table measure_to_object_type {
  measure_id bigint [pk, ref: > measures.id, delete: cascade]
  object_type_id bigint [pk, ref: > object_types.id, delete: cascade]
  is_required boolean [default: false]
  custom_name varchar
  Note: 'Какие показатели у какого типа объектов'
}

Table measure_values {
  id bigserial [pk]
  client_uuid uuid [unique, not null]
  measure_id bigint [not null, ref: > measures.id]
  object_id bigint [not null, ref: > objects.id, delete: cascade]
  value numeric [not null]
  measured_at timestamptz [not null]
  device_id varchar [default: 'unknown']
  author_id bigint [ref: > users.id]
  synced_at timestamptz [default: `now()`]
  indexes {
    (object_id, measure_id, measured_at) [name: 'idx_mv_object']
    measured_at [name: 'idx_mv_time']
  }
  Note: 'Сырые измерения. client_uuid — идемпотентность оффлайн-синхронизации'
}

// ===== Планируемые таблицы (из твоей диаграммы, ещё не реализованы) =====

Table measure_daily_state {
  id bigserial [pk]
  measure_id bigint
  object_type_id bigint
  object_id bigint
  start_balance numeric [note: 'остаток на начало дня']
  income numeric [note: 'приход за день']
  expense numeric [note: 'расход за день']
  close_balance numeric [note: 'остаток на конец дня']
  operation_count int
  date date
  state smallint
  Note: 'ПЛАН: оборотный регистр за день — из твоей диаграммы'
}

Table measure_monthly_state {
  id bigserial [pk]
  measure_id bigint
  object_type_id bigint
  object_id bigint
  start_balance numeric
  income numeric
  expense numeric
  close_balance numeric
  operation_count int
  period varchar [note: 'Year & Month']
  date date
  state smallint
  Note: 'ПЛАН: оборотный регистр за месяц'
}

Table measure_year_state {
  id bigserial [pk]
  measure_id bigint
  object_type_id bigint
  object_id bigint
  start_balance numeric
  income numeric
  expense numeric
  close_balance numeric
  operation_count int
  period int [note: 'Year']
  date date
  state smallint
  Note: 'ПЛАН: оборотный регистр за год'
}

Table specs {
  id bigserial [pk]
  name varchar [not null]
  data_type varchar
  unit varchar
  Note: 'ПЛАН: характеристики объектов (порода, дата рождения) — из твоей диаграммы'
}

Table spec_values {
  id bigserial [pk]
  object_id bigint
  spec_id bigint
  value varchar
  date timestamptz
  Note: 'ПЛАН: значения характеристик'
}
